# pyxelart

./: .gitignore  README.md  README_extract_frames.md  README_nobg.md  README_pyxelart.md  README_pyxelart_video.md  extract_audio.py  image_convert_webp.py  image_cutter.py  install.ps1  install.sh  main.py  nobg.py  nobg_video.py  project.toml  pyproject.toml  pyxelart.py  pyxelart_gif.py  pyxelart_video.py  requirements.txt  video_convert_webm.go  video_convert_webm.py  video_extract_frames.py  video_nobg.py
docs/: README_image_cutter.md  README_pyxelart_gif.md  README_video_convert_webm.md  README_video_extract_audio.md  README_video_nobg.md
